...
            android:elevation="0.1dp"
            android:fitsSystemWindows="true"
            android:stateListAnimator="@null">

            <!-- Simple MaterialToolbar extension -->
            <com.lapism.search.widget.MaterialSearchBar
                android:id="@+id/material_search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="0dp"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="enterAlways|snap" />
...
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />

    <com.lapism.search.widget.MaterialSearchView
        android:id="@+id/material_search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        android:fitsSystemWindows="true"
        app:layout_anchor="@id/material_search_bar" />

...
