...
        android:id="@+id/cl_maps"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--     Route Sheet      -->
        <FrameLayout
            android:id="@+id/standard_bottom_sheet"
            style="@style/ThemeOverlay.App.BottomSheetDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:elevation="10dp"
            android:overScrollMode="always"
...
                android:backgroundTint="@color/accent"
                android:contentDescription="@string/zooms_in_on_current_location"
                android:elevation="2dp"
                android:visibility="gone"
                app:borderWidth="0dp"
                app:elevation="2dp"
                app:layout_constraintBottom_toTopOf="@id/fab_timetable"
                app:layout_constraintEnd_toEndOf="parent"
                app:pressedTranslationZ="3dp"
                app:rippleColor="@color/red_700"
                app:srcCompat="@drawable/crosshairs_gps"
                app:tint="@color/white" />

...
