...
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginBottom="16dp">

    <!--     Timetable Sheet      -->
    <FrameLayout
        android:id="@+id/timetable_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/right_sheet_behavior">

        <!-- Right sheet contents. -->
        <com.google.android.material.card.MaterialCardView
...
                    app:iconPadding="-1dp"
                    app:iconTint="@color/foreground_60"
                    app:layout_constraintStart_toEndOf="@id/drag_rec"
                    app:layout_constraintTop_toBottomOf="@id/hSV" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/try_another_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@color/accent"
                    android:stateListAnimator="@null"
                    android:text="@string/try_another_date"
...
