<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/garages"
        android:title="@string/garages"
        android:icon="@drawable/garage"
        app:exb_color="@color/purple_300"/>

    <item
        android:id="@+id/directions"
        android:title="@string/directions"
        android:icon="@drawable/directions"
        app:exb_color="@color/cyan_300"/>

    <item
        android:id="@+id/buses"
        android:title="@string/buses"
        android:icon="@drawable/bus"
        app:exb_color="@color/accent"/>

</menu>