<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/directions"
    app:startDestination="@id/second_fragment">

    <fragment
        android:id="@+id/second_fragment"
        android:name="com.mrst.aggiemaps.GarageFragment"
        android:label="Leaderboard"
        tools:layout="@layout/fragment_garages" >
        <action
            android:id="@+id/action_second_fragment_to_first_fragment"
            app:destination="@id/first_fragment" />
    </fragment>

</navigation>